[gd_scene load_steps=42 format=3 uid="uid://iuj1jg31a55f"]

[ext_resource type="Script" uid="uid://bhcr3m01slk8a" path="res://Scripts/enemy.gd" id="1_18den"]
[ext_resource type="PackedScene" uid="uid://cpogcou30wxcj" path="res://UI/combat_properties.tscn" id="7_7ej0e"]
[ext_resource type="Shader" uid="uid://dgty7bsbniivw" path="res://Scripts/flash.gdshader" id="8_6eeyp"]
[ext_resource type="Texture2D" uid="uid://bxfbcd2o3tqam" path="res://Assets/Enemy/Goblin/goblin-idle.png" id="9_3g55t"]
[ext_resource type="Texture2D" uid="uid://c6nifh0i54h6f" path="res://Assets/Enemy/Goblin/goblin-bash.png" id="11_wrk2e"]
[ext_resource type="Texture2D" uid="uid://ppmeb6xgbtin" path="res://Assets/Enemy/Goblin/goblin-death.png" id="12_to5id"]
[ext_resource type="Texture2D" uid="uid://cnglwro36se85" path="res://Assets/Enemy/Goblin/goblin-hurt.png" id="13_uqw8j"]
[ext_resource type="Texture2D" uid="uid://bpxyvituq5b37" path="res://Assets/Enemy/Goblin/goblin-walk.png" id="14_abbm1"]
[ext_resource type="Texture2D" uid="uid://chla4jvcboa4e" path="res://Assets/Enemy/Goblin/goblin-slash.png" id="15_4po4b"]
[ext_resource type="Texture2D" uid="uid://bhywg3kg1q3in" path="res://Assets/Enemy/Goblin/goblin-attack.png" id="15_mlxbl"]
[ext_resource type="PackedScene" uid="uid://b02rwb4cvvhr4" path="res://Objects/state_machine.tscn" id="17_n2jyc"]
[ext_resource type="Script" uid="uid://j4axxy1utgo5" path="res://Assets/Enemy/States/patrol.gd" id="18_pn3ih"]
[ext_resource type="Script" uid="uid://bhwnkjtvdjwgs" path="res://Assets/Enemy/States/hurt.gd" id="19_xl5vi"]
[ext_resource type="Script" uid="uid://3m1a1sihw7qa" path="res://Assets/Enemy/States/death.gd" id="20_4po4b"]
[ext_resource type="Script" uid="uid://3lerje1i52sl" path="res://Assets/Enemy/States/animation_state_enemy.gd" id="20_ujm0m"]
[ext_resource type="PackedScene" uid="uid://2s1ryg6qqqmc" path="res://Objects/hitbox.tscn" id="21_oeh1l"]
[ext_resource type="Script" uid="uid://bk738pl78o133" path="res://Assets/Enemy/States/stance_heavy.gd" id="22_7ej28"]
[ext_resource type="Script" uid="uid://bmsypgid81p62" path="res://Assets/Enemy/States/stance_light.gd" id="23_j8fla"]
[ext_resource type="Script" uid="uid://cst0ispd68osy" path="res://Assets/Enemy/States/stance_defensive.gd" id="24_lox44"]
[ext_resource type="Script" uid="uid://brsvx5cdthjao" path="res://Assets/Enemy/States/stun.gd" id="25_208af"]
[ext_resource type="Texture2D" uid="uid://yh6p23n7un5u" path="res://Assets/Others/Sliders/cur_health.png" id="26_ifl3v"]
[ext_resource type="Script" uid="uid://d2dnfu2yrmil" path="res://Assets/Enemy/States/chase.gd" id="26_ug7pn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqw5a"]
size = Vector2(20, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvv27"]
size = Vector2(42, 38)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xhuvx"]
shader = ExtResource("8_6eeyp")
shader_parameter/flash_intensity = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_p3exd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_3g55t")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/flash_intensity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:material:shader_parameter/flash_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../StateMachine/slash/SlashHitbox/Collider:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../StateMachine/stab/StabHitbox/Collider:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../StateMachine/bash/BashHitbox/Collider:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iufq0"]
resource_name = "bash"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.390714, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_wrk2e")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StateMachine/bash/BashHitbox/Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_3i20h"]
resource_name = "block"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_wrk2e")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_iprve"]
resource_name = "death"
length = 1.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_to5id")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_kbkgb"]
resource_name = "hurt"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_uqw8j")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_csflc"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_3g55t")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_wj3eb"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_abbm1")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_nd8hd"]
resource_name = "slash"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_4po4b")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StateMachine/slash/SlashHitbox/Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_p8gt6"]
resource_name = "stab"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_mlxbl")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StateMachine/stab/StabHitbox/Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_w27ub"]
resource_name = "stance_defensive"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.3001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_wrk2e")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/flash_intensity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:material:shader_parameter/flash_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.316306, 0.408732, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yed1v"]
resource_name = "stance_heavy"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_4po4b")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/flash_intensity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.40666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:material:shader_parameter/flash_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.82256, 0.0304718, 0.450774, 1)]
}

[sub_resource type="Animation" id="Animation_aif1k"]
resource_name = "stance_light"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_mlxbl")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/flash_intensity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:material:shader_parameter/flash_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.799304, 0.575198, 0.166907, 1)]
}

[sub_resource type="Animation" id="Animation_ifl3v"]
resource_name = "stun"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_uqw8j")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyvhu"]
_data = {
&"RESET": SubResource("Animation_p3exd"),
&"bash": SubResource("Animation_iufq0"),
&"block": SubResource("Animation_3i20h"),
&"death": SubResource("Animation_iprve"),
&"hurt": SubResource("Animation_kbkgb"),
&"idle": SubResource("Animation_csflc"),
&"run": SubResource("Animation_wj3eb"),
&"slash": SubResource("Animation_nd8hd"),
&"stab": SubResource("Animation_p8gt6"),
&"stance_defensive": SubResource("Animation_w27ub"),
&"stance_heavy": SubResource("Animation_yed1v"),
&"stance_light": SubResource("Animation_aif1k"),
&"stun": SubResource("Animation_ifl3v")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsl2l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rha5u"]
size = Vector2(20, 32)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_18den")

[node name="Collider" type="CollisionShape2D" parent="." groups=["Flip"]]
visible = false
position = Vector2(-1, -5.5)
shape = SubResource("RectangleShape2D_cqw5a")

[node name="PlayerProximity" type="Area2D" parent="."]
visible = false
scale = Vector2(0.7, 1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerProximity"]
shape = SubResource("RectangleShape2D_lvv27")

[node name="CombatProperties" parent="." instance=ExtResource("7_7ej0e")]

[node name="FallCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -10)
target_position = Vector2(17, 27)

[node name="Sprite2D" type="Sprite2D" parent="." groups=["Flip"]]
material = SubResource("ShaderMaterial_xhuvx")
position = Vector2(0, -16)
scale = Vector2(-1, 1)
texture = ExtResource("9_3g55t")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_uyvhu")
}

[node name="ChaseDetector" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 16)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseDetector"]
position = Vector2(0, -16)
scale = Vector2(10.4, 1.64)
shape = SubResource("RectangleShape2D_qsl2l")

[node name="StateMachine" parent="." instance=ExtResource("17_n2jyc")]
visible = false
position = Vector2(0, 16)

[node name="patrol" type="Node" parent="StateMachine"]
script = ExtResource("18_pn3ih")

[node name="PatrolTimer" type="Timer" parent="StateMachine/patrol"]
one_shot = true
autostart = true

[node name="IdleTimer" type="Timer" parent="StateMachine/patrol"]
one_shot = true

[node name="hurt" type="Node" parent="StateMachine"]
script = ExtResource("19_xl5vi")

[node name="death" type="Node" parent="StateMachine"]
script = ExtResource("20_4po4b")

[node name="slash" type="Node2D" parent="StateMachine"]
script = ExtResource("20_ujm0m")

[node name="SlashHitbox" parent="StateMachine/slash" groups=["Flip"] instance=ExtResource("21_oeh1l")]
collision_mask = 2

[node name="Collider" parent="StateMachine/slash/SlashHitbox" index="0"]
position = Vector2(20.045, -20)
scale = Vector2(2, 1)

[node name="stab" type="Node2D" parent="StateMachine"]
script = ExtResource("20_ujm0m")

[node name="StabHitbox" parent="StateMachine/stab" groups=["Flip"] instance=ExtResource("21_oeh1l")]
collision_mask = 2

[node name="Collider" parent="StateMachine/stab/StabHitbox" index="0"]
position = Vector2(26.14, -24.45)
scale = Vector2(2.632, 1.355)

[node name="bash" type="Node2D" parent="StateMachine"]
script = ExtResource("20_ujm0m")

[node name="BashHitbox" parent="StateMachine/bash" groups=["Flip"] instance=ExtResource("21_oeh1l")]
collision_mask = 2

[node name="Collider" parent="StateMachine/bash/BashHitbox" index="0"]
position = Vector2(19.125, -20)
scale = Vector2(1.905, 1)

[node name="stance_heavy" type="Node" parent="StateMachine"]
script = ExtResource("22_7ej28")

[node name="Timer" type="Timer" parent="StateMachine/stance_heavy"]

[node name="stance_light" type="Node" parent="StateMachine"]
script = ExtResource("23_j8fla")

[node name="Timer" type="Timer" parent="StateMachine/stance_light"]

[node name="stance_defensive" type="Node" parent="StateMachine"]
script = ExtResource("24_lox44")

[node name="Timer" type="Timer" parent="StateMachine/stance_defensive"]

[node name="stun" type="Node" parent="StateMachine"]
script = ExtResource("25_208af")

[node name="chase" type="Node2D" parent="StateMachine"]
script = ExtResource("26_ug7pn")

[node name="AttackDetector" type="Area2D" parent="StateMachine/chase"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/chase/AttackDetector"]
position = Vector2(0, -16)
scale = Vector2(3.07, 1)
shape = SubResource("RectangleShape2D_rha5u")

[node name="StateSwitchTimer" type="Timer" parent="."]
one_shot = true

[node name="Health" type="TextureProgressBar" parent="."]
visible = false
offset_left = -26.0
offset_top = 19.0
offset_right = 26.0
offset_bottom = 59.0
max_value = 3.0
value = 3.0
texture_progress = ExtResource("26_ifl3v")

[connection signal="health_depleted" from="." to="." method="_on_health_depleted"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="ChaseDetector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="ChaseDetector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="StateMachine/patrol/PatrolTimer" to="StateMachine/patrol" method="_on_patrol_timer_timeout"]
[connection signal="timeout" from="StateMachine/patrol/IdleTimer" to="StateMachine/patrol" method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="StateMachine/slash/SlashHitbox" to="." method="_on_slash_hitbox_body_entered"]
[connection signal="body_entered" from="StateMachine/stab/StabHitbox" to="." method="_on_stab_hitbox_body_entered"]
[connection signal="body_entered" from="StateMachine/bash/BashHitbox" to="." method="_on_bash_hitbox_body_entered"]
[connection signal="timeout" from="StateMachine/stance_heavy/Timer" to="StateMachine/stance_heavy" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/stance_light/Timer" to="StateMachine/stance_light" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/stance_defensive/Timer" to="StateMachine/stance_defensive" method="_on_timer_timeout"]
[connection signal="body_entered" from="StateMachine/chase/AttackDetector" to="StateMachine/chase" method="_on_attack_detector_body_entered"]
[connection signal="body_exited" from="StateMachine/chase/AttackDetector" to="." method="_on_attack_detector_body_exited"]

[editable path="StateMachine/slash/SlashHitbox"]
[editable path="StateMachine/stab/StabHitbox"]
[editable path="StateMachine/bash/BashHitbox"]
